// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components Container renders correctly 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <p>
      Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`components Container supports extra arguments 1`] = `
<DocumentFragment>
  <div
    class="container extra"
  >
    <p>
      Text
    </p>
  </div>
</DocumentFragment>
`;
